--- a/src/css/App.css
+++ b/src/css/App.css
@@ -128,3 +128,23 @@ main {
     font-size: 1.5em;
     
 }
+
+
+
+#create-new-post{
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    order: 2;
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+
+.create-new-post-title {
+    margin: 2vh 1vw 2vh 1vw;
+    padding: .5vh .3vw .5vh .3vw;
+    background-color: black;
+    color: antiquewhite;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+}
