--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,6 +8,20 @@
 
 }  
 
+button {
+    background-color: darkolivegreen;
+    color: bisque;
+    border:none; 
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius:10px; 
+    padding: 5px;
+}
+
+button:hover {
+    background-color: lightgreen;
+    color: black;
+    transition: 0.5s;
+}
 
 
 h1 {
@@ -42,11 +56,51 @@ main {
     justify-content: space-evenly;
     order: 2;
     box-sizing: border-box;
+    border: 1px solid black;
 
     flex-wrap: wrap;
     height: 89vh;
     width: 80vw;
     background-color: teal;
+}
+
+
+#single-post-card {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    border: 1px solid black;
+    background-color: beige;
+    height: 50vh;
+    width: 60vw;
+    padding-left: 5vw;
+    margin-left: 5vw;
+}
+
+.create-reply-msg {
+    display: flex;
+    border: 1px solid black;
+    background-color: goldenrod;
+    height: 5vh;
+    width: 60vw;
+    padding-left: 5vw;
+    margin-left: 5vw;
+}
+
+#label-reply {
+    padding: 5px;
+    margin: 5px 0px 5px 0px;
+    background-color: black;
+    color: antiquewhite;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+}
+
+#input-reply {
+    padding: 5px;
+    margin: 5px 0px 5px 0px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    
 }
 
 .posts-filters-card {
